fix tags to categories

--- a/tools/admin/public/index.html
+++ b/tools/admin/public/index.html
@@ -28,7 +28,7 @@
 			<div class="main">
 				<aside class="left">
 					<div class="panel left-panel">
-						<input id="filter" class="input" placeholder="搜索标题 / slug / 分类 / 标签…" />
+						<input id="filter" class="input" placeholder="搜索标题 / slug / 分类…" />
 						<div class="muted meta" id="count"></div>
 					</div>
 					<div class="list" id="list"></div>
